--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,31 +7,134 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/textViewResult"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="177dp"
-        android:layout_marginTop="106dp"
-        android:layout_marginEnd="176dp"
-        android:layout_marginBottom="478dp"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:id="@+id/prompt1"
+        android:layout_width="356dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="3dp"
+        android:layout_marginTop="80dp"
+        android:background="@drawable/grey_message"
+        android:fontFamily="@font/mclaren"
+        android:text="   Hello! How are you feeling?"
+        android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="157dp"
-        android:layout_marginTop="445dp"
-        android:layout_marginEnd="158dp"
-        android:layout_marginBottom="67dp"
-        android:onClick="onButtonClick"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <TextView
+        android:id="@+id/prompt2"
+        android:layout_width="358dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="73dp"
+        android:layout_marginBottom="101dp"
+        android:background="@drawable/grey_message"
+        android:fontFamily="@font/mclaren"
+        android:text="   Go on, I'd like to know more"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/prompt3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/prompt1" />
+
+    <TextView
+        android:id="@+id/prompt3"
+        android:layout_width="342dp"
+        android:layout_height="53dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="88dp"
+        android:layout_marginEnd="77dp"
+        android:background="@drawable/grey_message"
+        android:fontFamily="@font/mclaren"
+        android:text="  What else can you tell me?"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.541"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/prompt2" />
+
+    <TextView
+        android:id="@+id/textViewResult"
+        android:layout_width="wrap_content"
+        android:layout_height="73dp"
+        android:layout_marginTop="128dp"
+        android:layout_marginEnd="16dp"
+        android:fontFamily="@font/mclaren"
+        android:textAlignment="viewEnd"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textViewResult2"
+        android:layout_width="wrap_content"
+        android:layout_height="81dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:fontFamily="@font/mclaren"
+        android:textAlignment="viewEnd"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/prompt2" />
+
+    <TextView
+        android:id="@+id/textViewResult3"
+        android:layout_width="wrap_content"
+        android:layout_height="76dp"
+        android:layout_marginTop="52dp"
+        android:layout_marginEnd="16dp"
+        android:fontFamily="@font/mclaren"
+        android:textAlignment="viewEnd"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewResult2" />
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="113dp"
+        android:layout_height="114dp"
+        android:layout_marginStart="157dp"
+        android:layout_marginTop="22dp"
+        android:layout_marginEnd="158dp"
+        android:background="@android:color/transparent"
+        android:onClick="onButtonClick"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.47"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spotify"
+        app:srcCompat="@drawable/final_enock" />
+
+    <ImageButton
+        android:id="@+id/spotify"
+        android:layout_width="93dp"
+        android:layout_height="83dp"
+        android:layout_marginStart="177dp"
+        android:layout_marginTop="35dp"
+        android:layout_marginEnd="178dp"
+        android:background="#0000"
+        android:onClick="spotify_Direct"
+        android:paddingRight="2px"
+        android:scaleType="fitCenter"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.486"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewResult3"
+        app:srcCompat="@drawable/spotify_icon" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="412dp"
+        android:layout_height="75dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="30dp"
+        app:layout_constraintBottom_toTopOf="@+id/prompt1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.508"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/ic_launcher" />
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/eknock_logo" />
+
 </android.support.constraint.ConstraintLayout>
